# package-explorer

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD
include/: DummyPackageManager.h  PackageManager.h  PacmanPackageManager.h
src/: DummyPackageManager.cpp  PacmanPackageManager.cpp  main.cpp
